fixed about page compatibility on mobile

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -25,18 +25,30 @@
     border-radius: 25px;
   }
 
-.container {
+/* .container {
 display: flex;
 width: 100%;
-}
+} */
+.container {
+    display: block;
+    width: 100%;
+    }
 
 .column {
 flex: 1;
-padding: 20px;
+padding-left: 1rem;
+padding-right: 1rem;
 box-sizing: border-box;
 }
+
 
 .image {
 max-width: 100%;
 height: auto;
 }
+
+@media only screen and (min-width: 1024px) {
+    .container {
+      display: flex;
+    }
+  }
